# sherpa-plugins

./: .gitignore  CMakeLists.txt  README.md  addon.json  compile_flags.txt  release.sh
.github/workflows/: builds.yaml  portability.yml  sherpa-prebuilt.yml  tests.yml
cmake/: sherpa-onnx.cmake
docs/: COVERAGE.md
src/: Asr.cpp  Asr.hpp  AudioLabels.cpp  AudioLabels.hpp  Denoiser.cpp  Denoiser.hpp  Diarization.cpp  Diarization.hpp  KeywordSpotter.cpp  KeywordSpotter.hpp  OfflineRecognizer.cpp  OfflineRecognizer.hpp  OnlineRecognizer.cpp  OnlineRecognizer.hpp  SherpaLoader.hpp  SourceSeparation.cpp  SourceSeparation.hpp  Speaker.cpp  Speaker.hpp  TextProcessor.cpp  TextProcessor.hpp  Tts.cpp  Tts.hpp  Vad.cpp  Vad.hpp
src/compat/: dylib_loader.hpp
src/helpers/: AudioChunker.hpp  Common.hpp  Handles.hpp  ModelConfig.hpp  Options.hpp
tests/: TestHelpers.hpp  test_asr.cpp  test_asr_48k.cpp  test_asr_offline.cpp  test_asr_online.cpp  test_audio_labels.cpp  test_coverage.cpp  test_denoiser.cpp  test_diarization.cpp  test_keyword_spotter.cpp  test_roundtrip.cpp  test_source_separation.cpp  test_speaker.cpp  test_structural.cpp  test_text.cpp  test_tts.cpp  test_vad.cpp
